lanecwe-Prod/src/objects/Vote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Voter_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Voter) Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Voters</relationshipLabel>
        <relationshipName>Voters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Power_Description__c</fullName>
        <description>Will populate the Score based on a formula field</description>
        <inlineHelpText>Unique to this Voter Record.</inlineHelpText>
        <label>Power Desciption</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Owner or Boss Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manages Users or Power User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>? - Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <formula>CASE( Power_Description__c, 
&quot;Budget Owner or Boss Of&quot;, 8, 
&quot;Influencer&quot;, 5, 
&quot;Manage Users or Power User&quot;, 2, 
&quot;? - Don&apos;t Know&quot;, -5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget Owner or Boss of = 8;
Influencer = 5;
Manage Users or Power User = 2
? = Don&apos;t Know = -5</inlineHelpText>
        <label>Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preference_Description__c</fullName>
        <label>Preference Description</label>
        <picklist>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <formula>CASE(  Preference_Description__c ,
&quot;Supporter&quot;, 30,
&quot;Neutral&quot;, -5,
&quot;Non-Supporter&quot;, -30,
&quot;? - Don&apos;t Know&quot;,-5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Support = 30; 
Neutral = -5; 
Non-Supporter = -30; 
? - Don&apos;t Know = -5</inlineHelpText>
        <label>Preference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Health_Score__c</fullName>
        <formula>Power__c  *  Preference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Takes Power and multiples the Preference</inlineHelpText>
        <label>Relationship Health Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Strategy__c</fullName>
        <label>Relationship Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Capitalize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counteract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <formula>Name_Voter_Contact__r.ReportsTo.FirstName +  Name_Voter_Contact__r.ReportsTo.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voter Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Voter_Title__c</fullName>
        <formula>Name_Voter_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voter Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_would_they_vote_for__c</fullName>
        <inlineHelpText>Competitor, Do Nothing, etc.</inlineHelpText>
        <label>Who would they vote for?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Voter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Voter ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>